<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/topBar">
            <ImageButton
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/bookNameDetail"
                style="@style/BookTitle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bookImageDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight=".50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_author"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authorValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detailGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_gender"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genderValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14dp" />


                <TextView
                    android:id="@+id/detailYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_year"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yearValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/detailPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_publisher"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/publisherValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bookDescDetail"
            style="@style/BookDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_info"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookDescDetail"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/buy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookPrice"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/primaryDark"
            android:text="Comprar" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buy_button"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/accent"
            android:text="Voltar" />
    </RelativeLayout>
</ScrollView>